public class InvalidPrescriptionException extends Exception{
    public InvalidPrescriptionException() {
        super();
    }
}
