import java.util.Queue;

public class Nurse extends Person implements Staff {


    public Nurse(String name, String surname, String ID, String phoneNum) {
        super(name, surname, ID, phoneNum);
    }
}
