public interface PatientInterface {
    void addAppointment();
    void removeAppointment();
    void viewAppointments();
    void viewPrescriptions();
}