public interface PersonInterface {
    String getName();
    String getSurname();
    String getID();
    String getPhoneNum();
    void setName(String name);
    void setSurname(String surname);
    void setID(String ID);
    void setPhoneNum(String phoneNum);
}
