public interface Staff{}