public class VaccineAppointment extends Appointment{

}