@startuml

title __SRC's Class Diagram__\n


    interface AdministratorInterface {
        {abstract} + addBeds()
        {abstract} + fireStaff()
        {abstract} + hireStaff()
        {abstract} + removeBeds()
        {abstract} + setVaccineAge()
        {abstract} + viewAllStaff()
        {abstract} + viewDormStatus()
        {abstract} + viewSpecificStaff()
    }

    interface Serializable{}

  


    class AlreadyInTreeException {
        + AlreadyInTreeException()
    }

  


    class Appointment {
        ~ time : LocalDateTime
    }

  


    class BinarySearchTree {
        - root : Node<E>
        + BinarySearchTree()
        + BinarySearchTree()
        + add()
        + contains()
        + delete()
        + find()
        + getData()
        + getLeftSubtree()
        + getRightSubtree()
        + inOrderTraversal()
        + isLeaf()
        {static} + readBinaryTree()
        + remove()
        + toString()
        - BinarySearchTree()
        - add()
        - biggestValue()
        - contains()
        - delete()
        - find()
        - inOrderTraversal()
        - preOrderTraversal()
    }

  


    class BinarySearchTree.Node {
        ~ left : Node<E>
        ~ right : Node<E>
        - Node()
    }

  


    class BloodTest {
    }

  


    enum Department {
      DERMATOLOGY
      INTERNAL_MEDICINE
      NEUROLOGY
      OPHTHALMOLOGY
      OTOLARYNGOLOGY
      PATHOLOGY
      PEDIATRICS
      SURGERY
    }

  


    class Doctor {
        ~ appointments : Queue<Appointment>
        + Doctor()
        + callPatient()
        + clearSchedule()
        + compareTo()
        + setPatientStatus()
        + viewAppointments()
        + viewInpatients()
        + viewPatientMedicalInfo()
        + viewPatientPrevAppointments()
    }


    interface DoctorInterface {
        {abstract} + callPatient()
        {abstract} + clearSchedule()
        {abstract} + setPatientStatus()
        {abstract} + viewAppointments()
        {abstract} + viewInpatients()
        {abstract} + viewPatientMedicalInfo()
        {abstract} + viewPatientPrevAppointments()
    }


    class Hospital_Management_System {
        ~ doctors : OrderedList<Doctor>
        ~ patients : OrderedList<Patient>
        ~ receptionists : OrderedList<Receptionist>
        + Hospital_Management_System()
        + findDoctor()
        + findPatient()
        + runSystem()
        - deserialize()
        - serialize()
    }


    class InvalidIDException {
        + InvalidIDException()
    }


    class InvalidPrescriptionException {
        + InvalidPrescriptionException()
    }


    class Notification {
        ~ time : LocalDateTime
    }


    class Nurse {
        + Nurse()
    }


    class OrderedList {
        - theData : LinkedList<E>
        + OrderedList()
        + add()
        + add()
        + addAll()
        + addAll()
        + clear()
        + contains()
        + containsAll()
        + get()
        + indexOf()
        + isEmpty()
        + iterator()
        + lastIndexOf()
        + listIterator()
        + listIterator()
        + remove()
        + remove()
        + removeAll()
        + retainAll()
        + set()
        + size()
        + subList()
        + toArray()
        + toArray()
        + toString()
    }


    class OrderedList.OrderedListIter {
        - iterator : ListIterator<E>
        + OrderedListIter()
        + OrderedListIter()
        + add()
        + hasNext()
        + hasPrevious()
        + next()
        + nextIndex()
        + previous()
        + previousIndex()
        + remove()
        + set()
    }


    class Patient {
        ~ age : int
        ~ appointments : ArrayList<Appointment>
        ~ isEmergency : boolean
        + Patient()
        + addAppointment()
        + compareTo()
        + removeAppointment()
        + viewAppointments()
        + viewPrescriptions()
    }


    interface PatientInterface {
        {abstract} + addAppointment()
        {abstract} + removeAppointment()
        {abstract} + viewAppointments()
        {abstract} + viewPrescriptions()
    }


    abstract class Person {
        ~ ID : String
        ~ name : String
        ~ phoneNum : String
        ~ surname : String
        + Person()
        + getID()
        + getName()
        + getPhoneNum()
        + getSurname()
        + setID()
        + setName()
        + setPhoneNum()
        + setSurname()
    }


    interface PersonInterface {
        {abstract} + getID()
        {abstract} + getName()
        {abstract} + getPhoneNum()
        {abstract} + getSurname()
        {abstract} + setID()
        {abstract} + setName()
        {abstract} + setPhoneNum()
        {abstract} + setSurname()
    }


    class PolyclinicAppointment {
        ~ status : String
    }


    class Prescription {
        ~ measure : int
        ~ medicine : String
        ~ times : int
        + Prescription()
        + Prescription()
        + getMeasure()
        + getMedicine()
        + getTimes()
        + setMeasure()
        + setMedicine()
        + setTimes()
        + toString()
    }


    class Receptionist {
        + Receptionist()
        + compareTo()
        + confirmAppointments()
        + newPatientRegistration()
    }

    interface ReceptionistInterface {
        {abstract} + confirmAppointments()
        {abstract} + newPatientRegistration()
    }


    interface Staff {
    }


    class VaccineAppointment {
    }


    class test {
        {static} + deserialize()
        {static} + main()
        {static} + serialize()
        {static} + timeInterval()
    }


  Appointment .up.|> Serializable
  Appointment o-- Patient : patient
  BinarySearchTree .up.|> Serializable
  BinarySearchTree o-- E : deletedItem
  BinarySearchTree +-down- BinarySearchTree.Node
  BinarySearchTree.Node .up.|> Serializable
  BinarySearchTree.Node o-- E : data
  Doctor .up.|> Comparable
  Doctor .up.|> DoctorInterface
  Doctor .up.|> Staff
  Doctor -up-|> Person
  Doctor o-- Department : department
  Hospital_Management_System .up.|> Serializable
  Notification o-- Person : person
  Nurse .up.|> Staff
  Nurse -up-|> Person
  OrderedList .up.|> Iterable
  OrderedList .up.|> List
  OrderedList .up.|> Serializable
  OrderedList +-down- OrderedList.OrderedListIter
  OrderedList.OrderedListIter .up.|> ListIterator
  Patient .up.|> Comparable
  Patient .up.|> PatientInterface
  Patient -up-|> Person
  Person .up.|> PersonInterface
  Person .up.|> Serializable
  PolyclinicAppointment -up-|> Appointment
  PolyclinicAppointment o-- Department : department
  PolyclinicAppointment o-- Doctor : doctor
  Receptionist .up.|> Comparable
  Receptionist .up.|> ReceptionistInterface
  Receptionist -up-|> Person
  VaccineAppointment -up-|> Appointment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
